--- a/templates/city/index.html.twig
+++ b/templates/city/index.html.twig
@@ -1,63 +1,66 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}City index{% endblock %}
+{% block title %}City index
+{% endblock %}
 
 {% block body %}
-    <h1>City index</h1>
+	<div class="container">
+		<h1>City index</h1>
 
-<form method="get" class="mb-3">
-    <input type="text" name="search" placeholder="City name" value="{{ search }}">
-    
-    <select name="status">
-        <option value="">-- Status --</option>
-        <option value="1" {{ status == '1' ? 'selected' }}>Active</option>
-        <option value="0" {{ status == '0' ? 'selected' }}>Not Active</option>
-    </select>
+		<form method="get" class="mb-3">
+			<input type="text" name="search" placeholder="City name" value="{{ search }}">
 
-    <select name="country">
-        <option value="">-- Country --</option>
-        {% for country in countries %}
-            <option value="{{ country.id }}" {{ country.id == selectedCountry ? 'selected' }}>
-                {{ country.name }}
-            </option>
-        {% endfor %}
-    </select>
+			<select name="status">
+				<option value="">-- Status --</option>
+				<option value="1" {{ status == '1' ? 'selected' }}>Active</option>
+				<option value="0" {{ status == '0' ? 'selected' }}>Not Active</option>
+			</select>
 
-    <button type="submit">Filter</button>
-</form>
+			<select name="country">
+				<option value="">-- Country --</option>
+				{% for country in countries %}
+					<option value="{{ country.id }}" {{ country.id == selectedCountry ? 'selected' }}>
+						{{ country.name }}
+					</option>
+				{% endfor %}
+			</select>
+
+			<button type="submit">Filter</button>
+		</form>
 
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Active</th>
-                <th>Delete</th>
-                <th>Country</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for city in cities %}
-            <tr>
-                <td>{{ city.id }}</td>
-                <td>{{ city.name }}</td>
-                <td>{{ city.active ? 'Yes' : 'No' }}</td>
-                <td>{{ city.isDeleted ? 'Yes' : 'No' }}</td>
-                <td>{{ city.Country }}</td>
-                <td>
-                    <a href="{{ path('app_city_show', {'id': city.id}) }}">show</a>
-                    <a href="{{ path('app_city_edit', {'id': city.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Name</th>
+					<th>Active</th>
+					<th>Delete</th>
+					<th>Country</th>
+					<th>actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for city in cities %}
+					<tr>
+						<td>{{ city.id }}</td>
+						<td>{{ city.name }}</td>
+						<td>{{ city.active ? 'Yes' : 'No' }}</td>
+						<td>{{ city.isDeleted ? 'Yes' : 'No' }}</td>
+						<td>{{ city.Country }}</td>
+						<td>
+							<a href="{{ path('app_city_show', {'id': city.id}) }}">show</a>
+							<a href="{{ path('app_city_edit', {'id': city.id}) }}">edit</a>
+						</td>
+					</tr>
+				{% else %}
+					<tr>
+						<td colspan="5">no records found</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
 
-    <a href="{{ path('app_addcity_new') }}">Create new</a>
+		<a href="{{ path('app_addcity_new') }}">Create new</a>
+	</div>
 {% endblock %}
